--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -26,20 +26,11 @@
     <div class="container">
         <div class="developer">
             <div class="developer-info">
-                <img src="developer1.jpg" alt="Developer 1">
-                <h2>Ranit Dey</h2>
-                <p>Frontend Developer</p>
-            </div>
-            <div class="developer-info">
-                <img src="developer2.jpg" alt="Developer 2">
-                <h2>Abir</h2>
-                <p>Backend Developer</p>
-            </div>
-            <div class="developer-info">
-                <img src="developer3.jpg" alt="Developer 3">
-                <h2>Sayan</h2>
-                <p>Full Stack Developer</p>
-            </div>
+                <div class="developer-info">
+                    <img src="developer3.jpg" alt="Developer 3">
+                    <h2>Snaptokon</h2>
+                    <p>Full Stack Developer</p>
+                </div>
         </div>
     </div>
 
